team-enrollment/routes/ingress-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chatbot-ingress-route
  namespace: wgu-demo-frontend
spec:
  hostnames:
  - "enroll.try-solo.io"
  parentRefs:
  - name: ingress
    namespace: agentgateway-ingress
  rules:
  - backendRefs:
    - name: enrollment-chatbot
      port: 8501
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-ingress-route
  namespace: monitoring
spec:
  hostnames:
  - "grafana.try-solo.io"
  parentRefs:
  - name: ingress
    namespace: agentgateway-ingress
  rules:
  - backendRefs:
    - name: kube-prometheus-leaf-1-grafana
      port: 3000
    matches:
    - path:
        type: PathPrefix
        value: /
